Nats queue for signing.
